Updated design for general information, making it fit with weeks

--- a/output/index.html
+++ b/output/index.html
@@ -98,34 +98,26 @@
 </section>
 
 <section class="general-information" id="general-information">
-    <h2>Generell information<a class="anchor" href="#general-information">&#128279;</a></h2>
+    <h2><a href="#general-information">Generell information</a></h2>
 
     <section id="courseplan">
-        <h4>Kursplan
-            <a class="anchor" href="#courseplan">&#128279;</a>
-        </h4>
+        <h4><a href="#courseplan">Kursplan</a></h4>
 
         <p>Kursplanen hittas genom att söka på <a href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612">DV1612</a> via BTH's webbplats.</p>
     </section>
 
     <section id="studyplan">
-        <h4>Studie- och lektionsplan
-            <a class="anchor" href="#studyplan">&#128279;</a>
-        </h4>
+        <h4><a href="#studyplan">Studie- och lektionsplan</a></h4>
         <p></p>
     </section>
 
     <section id="grading">
-        <h4>Betygsättning
-            <a class="anchor" href="#grading">&#128279;</a>
-        </h4>
+        <h4><a href="#grading">Betygsättning</a></h4>
         <p></p>
     </section>
 
     <section id="ladok">
-        <h4>Ladok
-            <a class="anchor" href="#ladok">&#128279;</a>
-        </h4>
+        <h4><a href="#ladok">Ladok</a></h4>
         <p>Enligt kursplanen finns det 3 Ladok-moment. Dessa är kopplade till inlämningsuppgifterna enligt nedan.</p>
 
         <table>
@@ -157,9 +149,7 @@
     </section>
 
     <section id="evaluation">
-        <h4>Kursvärdering
-            <a class="anchor" href="#evaluation">&#128279;</a>
-        </h4>
+        <h4><a href="#evaluation">Kursvärdering</a></h4>
         <p></p>
     </section>
 </section>
