Updated information about courseeval

--- a/output/index.html
+++ b/output/index.html
@@ -103,7 +103,7 @@
     <section id="repo">
         <h3><a href="#repo">Repo</a></h3>
 
-        <p>Exempelprogrammen som används i kursen finns i repot <a href="https://github.com/emilfolino/jsramverk" target="_blank">emilfolino/jsramverk</a></p>
+        <p>Exempelprogrammen som används i kursen finns i repot <a href="https://github.com/emilfolino/jsramverk" target="_blank">emilfolino/jsramverk</a>.</p>
     </section>
 
     <section id="courseplan">
@@ -190,9 +190,9 @@
         <h3><a href="#evaluation">Kursvärdering</a></h3>
         <p>Kursvärdering är ett viktigt verktyg för återkoppling och utvärdering
             av kurser både för Blekinge Tekniska Högskola men främst för
-            kursorganisationen och kursansvarige. I slutet av kursen skickas 
-        
-        
+            kursorganisationen och kursansvarige. I slutet av kursen skickas kursvärderingen
+            ut via Canvas och mail. Jag är som kursansvarig oerhört tacksam om du vill ta 3-5 minuter
+            att svara på kursvärderingen.
         </p>
     </section>
 </section>
