--- a/output/frontend.html
+++ b/output/frontend.html
@@ -238,7 +238,9 @@ return m(&quot;div.square&quot;,
 
     <footer class="footer">
         <div class="inner-footer">
-            <p>&copy; Emil Folino</p>
+            <p>&copy; <a href="https://emilfolino.se" target="_blank">Emil Folino</a></p>
+            <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
+            <p>The source code can be found at <a href="https://github.com/emilfolino/jsramverk.me">GitHub emilfolino/jsramverk.me</a></p>
         </div>
     </footer>
 </body>
