--- a/output/project.html
+++ b/output/project.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="inter-ui.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="style.min.css" media="none" onload="if(media!='all')media='all'">
     
-    <script defer src='bundle.js'></script>
-
+    <script src="bundle.js" defer></script>
     <noscript>
         <link rel="stylesheet" href="style.min.css">
     </noscript>
