--- a/output/backend.html
+++ b/output/backend.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / Backend</p><div class='week-container'><nav class='toc'><ul><li><a href='#backend'>Backend</a></li><li><a href='#lasa'>Läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#material'>Material</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section id="backend"><h1><a href="#backend">Backend</a></h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / Backend</p><div class='week-container'><nav class='toc' id='toc'><ul><li><a href='#backend'>Backend</a></li><li><a href='#lasa'>Läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#material'>Material</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section id="backend"><h1><a href="#backend">Backend</a></h1>
 <p>Vi skaffar oss en server och driftsätter ett API som vi använder i vår me-applikation.</p>
 </section><section id="lasa"><h2><a href="#lasa">Läsa</a></h2>
 <p>Vi vänder oss nu till dokumentationen för <a href="https://nodejs.org/en/docs/">Node</a> och <a href="http://expressjs.com/">Express</a> för att ytterligare se vad man kan göra med Express. Låt oss komma igång med grunderna i Express och hur man sätter upp en applikationsserver som även kan fungera som en vanlig webbserver.</p>
@@ -442,7 +442,7 @@ deb-src http://mirrors.digitalocean.com/debian stretch-backports main contrib no
 </section><section id="kravspec"><h2><a href="#kravspec">kravspec</a></h2>
 </article></section></div>    </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="inner-footer">
             <p>&copy; <a href="https://emilfolino.se" target="_blank">Emil Folino</a></p>
             <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
