--- a/output/nosql.html
+++ b/output/nosql.html
@@ -23,14 +23,14 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / NoSQL</p><div class='week-container'><nav class='toc'><ul><li><a href='#nosql'>NoSQL</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section id="nosql"><h1><a href="#nosql">NoSQL</a></h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / NoSQL</p><div class='week-container'><nav class='toc' id='toc'><ul><li><a href='#nosql'>NoSQL</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section id="nosql"><h1><a href="#nosql">NoSQL</a></h1>
 <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
 </section><section id="lasa"><h2><a href="#lasa">läsa</a></h2>
 </section><section id="titta"><h2><a href="#titta">titta</a></h2>
 </section><section id="kravspec"><h2><a href="#kravspec">kravspec</a></h2>
 </article></section></div>    </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="inner-footer">
             <p>&copy; <a href="https://emilfolino.se" target="_blank">Emil Folino</a></p>
             <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
