--- a/output/frontend.html
+++ b/output/frontend.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / Frontend</p><div class='week-container'><nav class='toc'><ul><li><a href='#frontend'>Frontend</a></li><li><a href='#lasa'>Läsa</a></li><li><a href='#titta'>Titta</a></li><li><a href='#material-och-tekniker'>Material och tekniker</a></li><li><a href='#flera-exempelprogram'>Flera exempelprogram</a></li><li><a href='#tekniska-koncept'>Tekniska koncept</a></li><li><a href='#kravspecifikation'>Kravspecifikation</a></li><li><a href='#skriva'>Skriva</a></li><li><a href='#sammanfattning'>Sammanfattning</a></li></ul></nav><article class='week'><section id="frontend"><h1><a href="#frontend">Frontend</a></h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / Frontend</p><div class='week-container'><nav class='toc' id='toc'><ul><li><a href='#frontend'>Frontend</a></li><li><a href='#lasa'>Läsa</a></li><li><a href='#titta'>Titta</a></li><li><a href='#material-och-tekniker'>Material och tekniker</a></li><li><a href='#flera-exempelprogram'>Flera exempelprogram</a></li><li><a href='#tekniska-koncept'>Tekniska koncept</a></li><li><a href='#kravspecifikation'>Kravspecifikation</a></li><li><a href='#skriva'>Skriva</a></li><li><a href='#sammanfattning'>Sammanfattning</a></li></ul></nav><article class='week'><section id="frontend"><h1><a href="#frontend">Frontend</a></h1>
 <p>Vi börjar kursen med att utvärdera frontend JavaScript ramverk. Vi tittar och jämför “The Big Three” Angular, React och Vue med Vanilla JavaScript och Mithril, som vi redan är bekanta med. Vi kollar på arkitekturen för de olika ramverken och hur vi gör vissa viktiga saker i ramverket. Vi jämför dessutom hur många rader det krävs för att skriva vissa kodexempel och hur stora produktionsfilerna blir för dessa kodexempel. Först bekantar vi oss med dokumentationen och tittar på en föreläsning om hur man väljer JavaScript ramverk.</p>
 </section><section id="lasa"><h2><a href="#lasa">Läsa</a></h2>
 <p>Följande länkar är bra att ha för undersökande och implementation.</p>
@@ -238,7 +238,7 @@ return m(&quot;div.square&quot;,
 <div class='embed-container'><iframe src="https://www.youtube.com/embed/k7n2xnOiWI8" frameborder="0" allowfullscreen></iframe></div>
 </article></section></div>    </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="inner-footer">
             <p>&copy; <a href="https://emilfolino.se" target="_blank">Emil Folino</a></p>
             <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
