--- a/output/test.html
+++ b/output/test.html
@@ -23,14 +23,14 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / Test</p><div class='week-container'><nav class='toc'><ul><li><a href='#test'>Test</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section id="test"><h1><a href="#test">Test</a></h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / Test</p><div class='week-container'><nav class='toc' id='toc'><ul><li><a href='#test'>Test</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section id="test"><h1><a href="#test">Test</a></h1>
 <p>Vi skapar en testmiljö för både frontend och backend kod, samt ett flöde för Continouos Integration.</p>
 </section><section id="lasa"><h2><a href="#lasa">läsa</a></h2>
 </section><section id="titta"><h2><a href="#titta">titta</a></h2>
 </section><section id="kravspec"><h2><a href="#kravspec">kravspec</a></h2>
 </article></section></div>    </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="inner-footer">
             <p>&copy; <a href="https://emilfolino.se" target="_blank">Emil Folino</a></p>
             <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
