--- a/output/ux.html
+++ b/output/ux.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / UX</p><div class='week-container'><nav class='toc'><ul><li><a href='#ux'>UX</a></li><li><a href='#lasa'>Läsa</a></li><li><a href='#titta'>Titta</a></li><li><a href='#skriva'>Skriva</a></li></ul></nav><article class='week'><section id="ux"><h1><a href="#ux">UX</a></h1>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / UX</p><div class='week-container'><nav class='toc' id='toc'><ul><li><a href='#ux'>UX</a></li><li><a href='#lasa'>Läsa</a></li><li><a href='#titta'>Titta</a></li><li><a href='#skriva'>Skriva</a></li></ul></nav><article class='week'><section id="ux"><h1><a href="#ux">UX</a></h1>
 <p>Vi fortsätter med att bekanta oss med vårt valda JavaScript frontend ramverk, men tittar denna veckan på hur vi kan använda ramverket för att skapa goda användareupplevelser. Vi ska titta på hur vi byggar ett registreringsformulär med validering och hur vi i det sambandet utnyttjar en modell i ramverket. Vi tittar även på hur vi kan förbättra användandet av dropdowns med hjälp av konceptet Last-Used-First-Out (LUFO).</p>
 </section><section id="lasa"><h2><a href="#lasa">Läsa</a></h2>
 <p>Nielsen Norman Group är världsledande inom forskningsbaserad User Experience (UX). Följande två artiklar introducerar veckans utforskande på ett koncist sätt.</p>
@@ -37,7 +37,7 @@
 <p>Veckans teknik som vi ska skriva en introduktion om är UX och hur just du applicerade UX principer i din kod.</p>
 </article></section></div>    </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="inner-footer">
             <p>&copy; <a href="https://emilfolino.se" target="_blank">Emil Folino</a></p>
             <p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License.</p>
