--- a/output/project.html
+++ b/output/project.html
@@ -23,11 +23,53 @@
     </header>
 
     <main class="container">
-<p class='breadcrump'><a href='/'>jsramverk.me</a> / Projekt</p><div class='week-container'><nav class='toc' id='toc'><ul><li><a href='#projekt'>Projekt</a></li><li><a href='#lasa'>läsa</a></li><li><a href='#titta'>titta</a></li><li><a href='#kravspec'>kravspec</a></li></ul></nav><article class='week'><section id="projekt"><h1><a href="#projekt">Projekt</a></h1>
-<p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
-</section><section id="lasa"><h2><a href="#lasa">läsa</a></h2>
-</section><section id="titta"><h2><a href="#titta">titta</a></h2>
-</section><section id="kravspec"><h2><a href="#kravspec">kravspec</a></h2>
+<p class='breadcrump'><a href='/'>jsramverk.me</a> / Projekt</p><div class='week-container'><nav class='toc' id='toc'><ul><li><a href='#projekt'>Projekt</a></li><li><a href='#projektspecifikation'>Projektspecifikation</a></li><li><a href='#redovisning'>Redovisning</a></li></ul></nav><article class='week'><section id="projekt"><h1><a href="#projekt">Projekt</a></h1>
+<p>Du jobbar som teknisk arkitekt och teamledare i en framstormande startup där du har <a href="https://en.wikipedia.org/wiki/Carte_blanche">Carte Blanche</a> att välja teknik inför ett nytt spännande projekt, som är tänkt skaka om trading-branchen. Du har stor påtryckning från eran investor <a href="https://a12o.emilfolino.se">a12o</a> att detta projekt måste lyckas för att de ska kunna glida resten av livet.</p>
+<p>Du har valt att bygga ihop en väl fungerande applikation som påvisar alla de tekniker du tror på. När du är klar så är tanken att du presenterar projektet och teknikerna för dina medlemmar i teamet och din applikation fungerar som utvärderings- och utbildningsmaterial för ditt team.</p>
+<p>Tänk på att ditt team till största del består av PHP-utvecklare kritiska mot nya tekniker och du behöver göra ett gott jobb för att imponera på dem. Annars är risken att de sågar dina nya idéer.</p>
+</section><section id="projektspecifikation"><h2><a href="#projektspecifikation">Projektspecifikation</a></h2>
+<p>Du ska utveckla och driftsätta en trading plattform baserad på följande kravspecifikation. Du ska själv välja objekt att sälja exempel på objekt kan vara råvaror, värdepapper, antikviteter eller varför inte kakor &amp; tårtor?</p>
+<p>Saknas info i specen så kan du själv välja väg, dokumentera dina val i redovisningstexten.</p>
+<p>De tre första kraven är obligatoriska och måste lösas för att få godkänt på uppgiften. De tre sista kraven är optionella krav. Lös optionella kraven för att samla poäng och nå högre betyg.</p>
+<p>För allra högsta betyg krävs en allmänt god applikation. Den skall vara snygg, tilltalande, lättanvänd, väl dokumenterad och felfri.</p>
+<p>Varje krav ger max 10 poäng, totalt är det 60 poäng.</p>
+<h4 id="repon-pa-github"><a href="#repon-pa-github">Repon på GitHub</a></h4>
+<p>Skapa flera repon för projektet. När du är klar, committa, tagga, pusha till GitHub. Länka till dina repon i din inlämning på Canvas.</p>
+<h3 id="krav-1:-backend"><a href="#krav-1:-backend">Krav 1: Backend</a></h3>
+<p>Skapa ett API för trading av dina valda objekt. Användare av din tradingplattform ska kunna registrera och autentisera sig mot plattformen. Som autentiserad användare ska det gå att köpa och sälja valda objekt som hamnar i ett depå kopplat till användaren. Gör det även möjligt för användaren att sätta in medel på depån, som användaren sedan kan handla för.</p>
+<p>Gör ett medvetet val av teknik och berätta utförligt i din README om vilka teknikval du har gjort och varför.</p>
+<h3 id="krav-2:-frontend"><a href="#krav-2:-frontend">Krav 2: Frontend</a></h3>
+<p>Skapa en klient som är publikt tillgänglig.  Klienten ska vara designat för att användas på enheter av olika storlekar. I klienten ska det vara möjligt att autentisera sig mot API:t. När klienten är autentiserad kan användaren se tillgängliga medel och objekt i depån samt handla med objekt. Gör det även möjligt för att användaren att sätta in medel på depån, som användaren sedan kan handla för.</p>
+<p>Gör ett medvetet val av teknik och berätta utförligt i din README om vilka teknikval du har gjort och varför.</p>
+<h3 id="krav-3:-realtid"><a href="#krav-3:-realtid">Krav 3: Realtid</a></h3>
+<p>Skapa en realtids micro-service som hanterar priserna för dina säljobjekt. I din frontend ska denna micro-service användas för att grafisk representera priserna i realtid.</p>
+<p>I dina README beskriver du i ett eget stycke om hur du implementerade realtidsaspekten i din applikation. Du skriver också om vilken teknik/verktyg du valt för din implementation samt en kort reflektion av hur du tycker tekniken fungerar.</p>
+<h3 id="krav-4:-tester-backend-(optionell)"><a href="#krav-4:-tester-backend-(optionell)">Krav 4: Tester backend (optionell)</a></h3>
+<p>Du har god kodtäckning i enhetstester och funktionstester på både backend och frontend. Sträva efter 70% där det är rimligt, men se det som en riktlinje och inte ett hårt krav.</p>
+<p>I din README skriver du ett stycke om vilka verktyg du använt för din testsuite och om det är delar av applikationen som inte täcks av tester. Du reflekterar kort över hur dina teknikval fungerat för dig. Du reflekterar också över hur lätt/svårt det är att få kodtäckning på din applikation.</p>
+<p>Man kan köra hela din testsuite lokalt via <code>npm test</code>.</p>
+<p>I README visar du hur man kan se kodtäckningen lokalt i webbläsaren.</p>
+<p>Dina repon har en CI-kedja och automatiserade tester med tillhörande badges för byggtjänst, kodtäckning och tjänst för kodkvalitet.</p>
+<p>I din README skriver du ett stycke om CI-kedjan, vilka tjänster du valt och varför samt eventuella begränsningar i hur CI-kedjan kan hantera din applikation. Du gör en kort reflektion över din syn på den hjälpen liknande verktyg ger dig.</p>
+<p>Berätta om du är nöjd eller inte med de betyg som tjänsten för kodkvalitet ger dig.</p>
+<h3 id="krav-5:-tester-frontend-(optionell)"><a href="#krav-5:-tester-frontend-(optionell)">Krav 5: Tester frontend (optionell)</a></h3>
+<p>I din README beskriver du 5 stycken use-cases för din applikation, som du sedan använder Selenium för att testa.</p>
+<p>Man kan köra hela din testsuite lokalt via <code>npm test</code>.</p>
+<h3 id="krav-6:-skrivande-(optionell)"><a href="#krav-6:-skrivande-(optionell)">Krav 6: Skrivande (optionell)</a></h3>
+<p>Skriv en akademisk sammanfattning av de lärdomar du har gjort under projektets gång. Sammanfatta vilka fördelar och nackdelar som dina valda tekniker och verktyg har gett dig under projektet.</p>
+</section><section id="redovisning"><h2><a href="#redovisning">Redovisning</a></h2>
+<p>Gör en inlämning på Canvas med följande innehåll:</p>
+<ol>
+<li>
+<p>Länka till ditt GitHub repo och berätta om vilka optionella krav du gjort. Och om du gjorde nya vägval rörande tekniker inför projektet.</p>
+</li>
+<li>
+<p>Skriv ett allmänt stycke om hur projektet gick att genomföra. Problem/lösningar/strul/enkelt/svårt/snabbt/lång tid, etc. Var projektet lätt eller svårt? Tog det lång tid? Vad var svårt och vad gick lätt? Var det ett bra och rimligt projekt för denna kursen?</p>
+</li>
+<li>
+<p>Avsluta med ett sista stycke med dina tankar om kursen och vad du anser om materialet och handledningen (ca 5-10 meningar). Ge feedback till lärarna och förslå eventuella förbättringsförslag till kommande kurstillfällen. Är du nöjd/missnöjd? Kommer du att rekommendera kursen till dina vänner/kollegor? På en skala 1-10, vilket betyg ger du kursen?</p>
+</li>
+</ol>
 </article></section></div>    </main>
 
     <footer class="footer" id="footer">
