Fixed clickable links for assignment headers

--- a/output/index.html
+++ b/output/index.html
@@ -30,7 +30,7 @@
 <section class="assignments">
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3>1: Frontend</h3>
+            <h3><a href="frontend.html">1: Frontend</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi utvärderar frontend ramverk och skapar en me-applikation i det JavaScript ramverk du valde.</p>
@@ -40,7 +40,7 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3>2: UX</h3>
+            <h3><a href="ux.html">2: UX</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi bygger vidare på vår me-applikation och tittar på hur användarens upplevelse sätts i fokus.</p>
@@ -50,7 +50,7 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3>3: Backend</h3>
+            <h3><a href="backend.html">3: Backend</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi skaffar oss en server och driftsätter ett API som vi använder i vår me-applikation.</p>
@@ -60,7 +60,7 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3>4: Test</h3>
+            <h3><a href="test.html">4: Test</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi skapar en testmiljö för både frontend och backend kod, samt ett flöde för Continouos Integration.</p>
@@ -70,7 +70,7 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3>5: Realtid</h3>
+            <h3><a href="realtid.html">5: Realtid</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi tittar på hur vi kan använda websockets för realtidsprogrammering på webben.</p>
@@ -80,7 +80,7 @@
     </div>
     <div class="assignment-box">
         <div class="assignment-header">
-            <h3>6: NoSQL</h3>
+            <h3><a href="nosql.html">6: NoSQL</a></h3>
         </div>
         <div class="assignment-body">
             <p>Vi användar en NoSQL databas för att spara data och jämför med relationsdatabaser.</p>
@@ -90,7 +90,7 @@
     </div>
     <div class="assignment-box project">
         <div class="assignment-header">
-            <h3>Projekt: Trading plattform</h3>
+            <h3><a href="project.html">Projekt: Trading plattform</a></h3>
         </div>
         <div class="assignment-body">
             <p>Du använder dina kunskaper från tidigare i kursen till att skapa en trading plattform.</p>
