--- a/output/project.html
+++ b/output/project.html
@@ -35,16 +35,16 @@
 <p>Varje krav ger max 10 poäng, totalt är det 60 poäng.</p>
 <h4 id="repon-pa-github"><a href="#repon-pa-github">Repon på GitHub</a></h4>
 <p>Skapa flera repon för projektet. När du är klar, committa, tagga, pusha till GitHub. Länka till dina repon i din inlämning på Canvas.</p>
-<h3 id="krav-1:-backend"><a href="#krav-1:-backend">Krav 1: Backend</a></h3>
+</section><section id="krav-1:-backend"><h3><a href="#krav-1:-backend">Krav 1: Backend</a></h3>
 <p>Skapa ett API för trading av dina valda objekt. Användare av din tradingplattform ska kunna registrera och autentisera sig mot plattformen. Som autentiserad användare ska det gå att köpa och sälja valda objekt som hamnar i ett depå kopplat till användaren. Gör det även möjligt för användaren att sätta in medel på depån, som användaren sedan kan handla för.</p>
 <p>Gör ett medvetet val av teknik och berätta utförligt i din README om vilka teknikval du har gjort och varför.</p>
-<h3 id="krav-2:-frontend"><a href="#krav-2:-frontend">Krav 2: Frontend</a></h3>
+</section><section id="krav-2:-frontend"><h3><a href="#krav-2:-frontend">Krav 2: Frontend</a></h3>
 <p>Skapa en klient som är publikt tillgänglig.  Klienten ska vara designat för att användas på enheter av olika storlekar. I klienten ska det vara möjligt att autentisera sig mot API:t. När klienten är autentiserad kan användaren se tillgängliga medel och objekt i depån samt handla med objekt. Gör det även möjligt för att användaren att sätta in medel på depån, som användaren sedan kan handla för.</p>
 <p>Gör ett medvetet val av teknik och berätta utförligt i din README om vilka teknikval du har gjort och varför.</p>
-<h3 id="krav-3:-realtid"><a href="#krav-3:-realtid">Krav 3: Realtid</a></h3>
+</section><section id="krav-3:-realtid"><h3><a href="#krav-3:-realtid">Krav 3: Realtid</a></h3>
 <p>Skapa en realtids micro-service som hanterar priserna för dina säljobjekt. I din frontend ska denna micro-service användas för att grafisk representera priserna i realtid.</p>
 <p>I dina README beskriver du i ett eget stycke om hur du implementerade realtidsaspekten i din applikation. Du skriver också om vilken teknik/verktyg du valt för din implementation samt en kort reflektion av hur du tycker tekniken fungerar.</p>
-<h3 id="krav-4:-tester-backend-(optionell)"><a href="#krav-4:-tester-backend-(optionell)">Krav 4: Tester backend (optionell)</a></h3>
+</section><section id="krav-4:-tester-backend-(optionell)"><h3><a href="#krav-4:-tester-backend-(optionell)">Krav 4: Tester backend (optionell)</a></h3>
 <p>Du har god kodtäckning i enhetstester och funktionstester på både backend och frontend. Sträva efter 70% där det är rimligt, men se det som en riktlinje och inte ett hårt krav.</p>
 <p>I din README skriver du ett stycke om vilka verktyg du använt för din testsuite och om det är delar av applikationen som inte täcks av tester. Du reflekterar kort över hur dina teknikval fungerat för dig. Du reflekterar också över hur lätt/svårt det är att få kodtäckning på din applikation.</p>
 <p>Man kan köra hela din testsuite lokalt via <code>npm test</code>.</p>
@@ -52,10 +52,10 @@
 <p>Dina repon har en CI-kedja och automatiserade tester med tillhörande badges för byggtjänst, kodtäckning och tjänst för kodkvalitet.</p>
 <p>I din README skriver du ett stycke om CI-kedjan, vilka tjänster du valt och varför samt eventuella begränsningar i hur CI-kedjan kan hantera din applikation. Du gör en kort reflektion över din syn på den hjälpen liknande verktyg ger dig.</p>
 <p>Berätta om du är nöjd eller inte med de betyg som tjänsten för kodkvalitet ger dig.</p>
-<h3 id="krav-5:-tester-frontend-(optionell)"><a href="#krav-5:-tester-frontend-(optionell)">Krav 5: Tester frontend (optionell)</a></h3>
+</section><section id="krav-5:-tester-frontend-(optionell)"><h3><a href="#krav-5:-tester-frontend-(optionell)">Krav 5: Tester frontend (optionell)</a></h3>
 <p>I din README beskriver du 5 stycken use-cases för din applikation, som du sedan använder Selenium för att testa.</p>
 <p>Man kan köra hela din testsuite lokalt via <code>npm test</code>.</p>
-<h3 id="krav-6:-skrivande-(optionell)"><a href="#krav-6:-skrivande-(optionell)">Krav 6: Skrivande (optionell)</a></h3>
+</section><section id="krav-6:-skrivande-(optionell)"><h3><a href="#krav-6:-skrivande-(optionell)">Krav 6: Skrivande (optionell)</a></h3>
 <p>Skriv en akademisk sammanfattning av de lärdomar du har gjort under projektets gång. Sammanfatta vilka fördelar och nackdelar som dina valda tekniker och verktyg har gett dig under projektet.</p>
 </section><section id="redovisning"><h2><a href="#redovisning">Redovisning</a></h2>
 <p>Gör en inlämning på Canvas med följande innehåll:</p>
