Fixed LICENSE in correct position and assignment boxes in correct size

--- a/output/index.html
+++ b/output/index.html
@@ -63,7 +63,7 @@
             <h3><a href="test.html">4: Test</a></h3>
         </div>
         <div class="assignment-body">
-            <p>Vi skapar en testmiljö för både frontend och backend kod, samt ett flöde för Continouos Integration.</p>
+            <p>Vi skapar en testmiljö för våra repon, samt ett flöde för Continouos Integration.</p>
 
             <p><a href="test.html">Gå till uppgiften</a></p>
         </div>
